--- a/.gitignore
+++ b/.gitignore
@@ -139,3 +139,5 @@ target/
 .mypy_cache/
 .Rproj.user
 code/python/MS2/U2C_Mega_ID_Xenobiotics - syn18700801 - Wiki.webloc
+proposal/Journal_club_proposal_postbaccFall2022_MG.docx
+proposal/Journal_club_proposal_postbaccFall2022_MG.pdf
