gitignore: Keep presentation in root folder

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,9 @@
 **/Rhistory.R
 **/trash
 **/reference
-**/presentation
+presentation/drafts/**
+presentation/resources/**
+
 
 # Keep gitkeep
 !**/output/.gitkeep
@@ -20,18 +22,15 @@
 # Keep README in input/output folders
 **/input/*
 **/output/*
-**/presentation/*
 **/reference/*
 
 !**/input/
 !**/output/
-!**/presentation/
 !**/reference/
 
 
 !**/input/README.md
 !**/output/README.md
-!**/presentation/README.md
 !**/reference/README.md
 
 # Keep Raw data in track
